// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseOpenApiToZod v2 should generate correct schema for operationId "allOfExample" 1`] = `
{
  "$ref": "#/definitions/allOfExample",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "allOfExample": {
      "additionalProperties": false,
      "properties": {
        "requestBody": {
          "allOf": [
            {
              "properties": {
                "id": {
                  "description": "Unique identifier",
                  "type": "string",
                },
                "name": {
                  "description": "Name of the entity",
                  "type": "string",
                },
              },
              "required": [
                "id",
                "name",
              ],
              "type": "object",
            },
            {
              "properties": {
                "additionalProperty": {
                  "description": "An additional property required by this endpoint.",
                  "type": "string",
                },
              },
              "required": [
                "additionalProperty",
              ],
              "type": "object",
            },
          ],
        },
      },
      "required": [
        "requestBody",
      ],
      "type": "object",
    },
  },
}
`;

exports[`parseOpenApiToZod v2 should generate correct schema for operationId "anyOfExample" 1`] = `
{
  "$ref": "#/definitions/anyOfExample",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "anyOfExample": {
      "additionalProperties": false,
      "properties": {
        "requestBody": {
          "anyOf": [
            {
              "additionalProperties": false,
              "properties": {
                "option1": {
                  "type": "string",
                },
              },
              "required": [
                "option1",
              ],
              "type": "object",
            },
            {
              "additionalProperties": false,
              "properties": {
                "option2": {
                  "type": "integer",
                },
              },
              "required": [
                "option2",
              ],
              "type": "object",
            },
          ],
        },
      },
      "required": [
        "requestBody",
      ],
      "type": "object",
    },
  },
}
`;

exports[`parseOpenApiToZod v2 should generate correct schema for operationId "notExample" 1`] = `
{
  "$ref": "#/definitions/notExample",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "notExample": {
      "additionalProperties": false,
      "properties": {
        "requestBody": {},
      },
      "type": "object",
    },
  },
}
`;

exports[`parseOpenApiToZod v2 should generate correct schema for operationId "oneOfExample" 1`] = `
{
  "$ref": "#/definitions/oneOfExample",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "oneOfExample": {
      "additionalProperties": false,
      "properties": {
        "requestBody": {
          "anyOf": [
            {
              "additionalProperties": false,
              "properties": {
                "type": {
                  "enum": [
                    "A",
                  ],
                  "type": "string",
                },
                "value": {
                  "type": "string",
                },
              },
              "required": [
                "type",
                "value",
              ],
              "type": "object",
            },
            {
              "additionalProperties": false,
              "properties": {
                "amount": {
                  "type": "number",
                },
                "type": {
                  "enum": [
                    "B",
                  ],
                  "type": "string",
                },
              },
              "required": [
                "type",
                "amount",
              ],
              "type": "object",
            },
          ],
        },
      },
      "required": [
        "requestBody",
      ],
      "type": "object",
    },
  },
}
`;
